--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,4 +1,14 @@
-.topbar {
-  height: 50px;
-  background:red;
+.content{
+  max-width: 1000px;
+  margin-top: 40px;
+}
+.profile-container {
+  width : 30%;
+  max-width: 300px;
+}
+.b{
+  border: 1px solid red;
+}
+.b1{
+  border: 1px solid green;
 }
