--- a/views/includes/topbar.pug
+++ b/views/includes/topbar.pug
@@ -1,4 +1,4 @@
-navbar(class="navbar navbar-expand-lg navbar-light bg-light")
+navbar(class="navbar navbar-expand-lg navbar-dark bg-dark")
   a(class="navbar-brand" href="#")
     img(width="30" height="30" src="images/twitter.png")
   button(class="navbar-toggler")
@@ -6,6 +6,8 @@ navbar(class="navbar navbar-expand-lg navbar-light bg-light")
   div(class="collapse navbar-collapse")
     ul(class="navbar-nav ml-auto")
       li(class="nav-item active")
-        a(class="nav-link" href="#") Home
-      li(class="nav-item")
-        a(class="nav-link" href="#") Connexion
+        a(class="btn btn-primary btn-tweet text-white mr-3" href="/tweet/new") Tweet
+      li(class="nav-item ")
+        a(class="nav-link text-white" href="#") Inscription
+      li(class="nav-item ")
+        a(class="nav-link text-white" href="#") Connexion
